--- a/СРС/pages/catalog.html
+++ b/СРС/pages/catalog.html
@@ -24,6 +24,69 @@
             </div>
         </div>
     </div>
+
+    <div class="container photo-container" style="background: url(../img/about/about.png);">
+        <div class="content" style="gap: 30px; margin-left: 100px;" id="description">
+            <div class="content">
+                <h2 id="blockTitle">О КОМПАНИИ</h2>
+                <p id="blockText" style="max-width: 500px;">"Гранд-Мотор" работает на автомобильном рынке Владимирской области с 2005 года и за это время стал лидером в</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container catalog">
+        <div class="item">
+            <img src="../img/KIA.jpeg" class="image" alt="KIA">
+            <div class="card-contenet">
+                <div class="card-title">Название товара</div>
+                <div class="card-price">$99.99</div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../img/KIA.jpeg" class="image" alt="KIA">
+            <div class="card-contenet">
+                <div class="card-title">Название товара</div>
+                <div class="card-price">$99.99</div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../img/KIA.jpeg" class="image" alt="KIA">
+            <div class="card-contenet">
+                <div class="card-title">Название товара</div>
+                <div class="card-price">$99.99</div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../img/KIA.jpeg" class="image" alt="KIA">
+            <div class="card-contenet">
+                <div class="card-title">Название товара</div>
+                <div class="card-price">$99.99</div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../img/KIA.jpeg" class="image" alt="KIA">
+            <div class="card-contenet">
+                <div class="card-title">Название товара</div>
+                <div class="card-price">$99.99</div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../img/KIA.jpeg" class="image" alt="KIA">
+            <div class="card-contenet">
+                <div class="card-title">Название товара</div>
+                <div class="card-price">$99.99</div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="../img/KIA.jpeg" class="image" alt="KIA">
+            <div class="card-contenet">
+                <div class="card-title">Название товара</div>
+                <div class="card-price">$99.99</div>
+            </div>
+        </div>
+
+    </div>
+
     <div class="footer">
         <a href="index.html">
             <div class="logo">
