--- a/СРС/pages/about.html
+++ b/СРС/pages/about.html
@@ -40,7 +40,8 @@
 
     <div class="container" style="padding-top: 30px; margin-left: -2%;" >
     </div>
-    <div class="container" id="other" style="min-width: 800px;">
+
+    <div class="container" style="min-width: 800px;">
         <div class="categories" id="navigation" style="width: 25%; min-width: 200px;">
             <div class="heading" style="margin-left: 11%;">Навигация</div>
             <ul>
@@ -58,7 +59,7 @@
                 </a>
             </ul>
         </div>
-        <hr class="divider">
+        <hr class="divider" id="other">
         <div class="container" style="flex-direction: column; width:73%;">
 
             <h3 id="sphereOfActivity">Сфера деятельности</h3>
