services + links + description

--- a/СРС/index.html
+++ b/СРС/index.html
@@ -21,7 +21,7 @@
             <div class="navigation">
                 <a href="./pages/about.html">О компании</a>
                 <a href="./pages/catalog.html">Каталог</a>
-                <a href="#">Сервис</a>
+                <a href="./pages/services.html">Сервис</a>
             </div>
             <div class="contact-info">
                 <p>Связь с нами:<br>+7 999 888 77 66</p>
