--- a/СРС/pages/about.html
+++ b/СРС/pages/about.html
@@ -19,9 +19,9 @@
         </a>
         <div class="info">
             <div class="navigation">
-                <a href="./pages/about.html">О компании</a>
-                <a href="#">Каталог</a>
-                <a href="#">Сервис</a>
+                <a href="./about.html">О компании</a>
+                <a href="./catalog.html">Каталог</a>
+                <a href="./services.html">Сервис</a>
             </div>
             <div class="contact-info">
                 <p>Связь с нами:<br>+7 999 888 77 66</p>
@@ -33,7 +33,7 @@
         <div class="content" style="gap: 30px; margin-left: 100px;" id="description">
             <div class="content">
                 <h2 id="blockTitle">О КОМПАНИИ</h2>
-                <p id="blockText" style="max-width: 500px;">"Гранд-Мотор" работает на автомобильном рынке Владимирской области с 2005 года и за это время стал лидером в</p>
+                <p id="blockText" style="max-width: 500px;">"Гранд-Мотор" работает на автомобильном рынке Владимирской области с 2005 года и за это время стал лидером в своем сегменте</p>
             </div>
         </div>
     </div>
