--- a/СРС/pages/catalog.html
+++ b/СРС/pages/catalog.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <title>Каталог авто Гранд-Мотор</title>
 </head>
 <body>
     <div class="header">
@@ -15,9 +18,9 @@
         </a>
         <div class="info">
             <div class="navigation">
-                <a href="./pages/about.html">О компании</a>
-                <a href="./pages/catalog.html">Каталог</a>
-                <a href="#">Сервис</a>
+                <a href="./about.html">О компании</a>
+                <a href="./catalog.html">Каталог</a>
+                <a href="./services.html">Сервис</a>
             </div>
             <div class="contact-info">
                 <p>Связь с нами:<br>+7 999 888 77 66</p>
@@ -28,8 +31,8 @@
     <div class="container photo-container" style="background: url(../img/about/about.png);">
         <div class="content" style="gap: 30px; margin-left: 100px;" id="description">
             <div class="content">
-                <h2 id="blockTitle">О КОМПАНИИ</h2>
-                <p id="blockText" style="max-width: 500px;">"Гранд-Мотор" работает на автомобильном рынке Владимирской области с 2005 года и за это время стал лидером в</p>
+                <h2 id="blockTitle">КАТАЛОГ АВТОМОБИЛЕЙ</h2>
+                <p id="blockText" style="max-width: 500px;">Ознакомьтесь с нашим разнообразным каталогом автомобилей высокого качества для каждого клиента</p>
             </div>
         </div>
     </div>
