--- a/СРС/pages/catalog.html
+++ b/СРС/pages/catalog.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html">
+        <a href="../index.html">
             <div class="logo">
                 <img src="../img/ЛОГО.png" alt="Логотип">
             </div>
@@ -101,7 +101,7 @@
     </div>
 
     <div class="footer">
-        <a href="index.html">
+        <a href="../index.html">
             <div class="logo">
                 <img src="../img/ЛОГО.png" alt="Логотип">
             </div>
